--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
+	"extends": "./tsconfig-base.json",
 	"compilerOptions": {
-		"alwaysStrict": true,
-		"strict": true,
-		"target": "es5",
 		"module": "ES2015",
-		"lib": ["es2015", "es2017", "dom"],
-		"baseUrl": "../node_modules",
 		"types": ["cypress"]
 	},
 	"include": ["**/*.ts", "**/*.js"],
