--- a/tsconfig.prepublish.cjs.json
+++ b/tsconfig.prepublish.cjs.json
@@ -1,13 +1,9 @@
 {
+	"extends": "./tsconfig-base.json",
 	"compilerOptions": {
-		"alwaysStrict": true,
-		"noImplicitAny": true,
-		"target": "es5",
 		"module": "commonjs",
 		"declaration": true,
-		"lib": ["es2015", "es2017", "dom"],
-		"removeComments": false,
-		"outDir": "npm"
+		"outDir": "dist/cjs"
 	},
 	"files": ["./index.ts"],
 	"include": ["./core/**/*.ts", "./common/**/*.ts", "./types/**/*.ts", "./helpers/**/*.ts"],
