npm ignore should only ignore the top level folders

--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,8 @@
-common
-core
-cypress
-helpers
-node_modules
+./common
+./core
+./cypress
+./helpers
+./node_modules
 ./*
 !./package.json
 !./LICENSE
