Switching to using files in package.json instead of .npmignore

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
 			"require": "./dist/cjs/index.js"
 		}
 	},
+	"files": [
+		"/dist"
+	],
 	"scripts": {
 		"start": "cypress open",
 		"test": "cypress run",
