--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
 		}
 	},
 	"files": [
-		"/dist"
+		"/dist",
+		"/LICENSE",
+		"/package.json",
+		"/README.md"
 	],
 	"scripts": {
 		"start": "cypress open",
