Adding "common" folder to exports

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
 		".": {
 			"import": "./dist/mjs/index.js",
 			"require": "./dist/cjs/index.js"
+		},
+		"./common": {
+			"import": "./dist/mjs/common/index.js",
+			"require": "./dist/cjs/common/index.js"
 		}
 	},
 	"files": [
