--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -10,6 +10,7 @@
 		"pretty": true,
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
-		"removeComments": true
+		"removeComments": true,
+		"allowSyntheticDefaultImports": true
 	}
 }
