the min.js file doesn't need to be split between mjs and cjs

--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
 			"import": "./dist/mjs/common/index.js",
 			"require": "./dist/cjs/common/index.js"
 		},
-		"./dist/time-input-polyfill-utils.min.js": {
-			"import": "./dist/time-input-polyfill-utils.min.js",
-			"require": "./dist/time-input-polyfill-utils.min.js"
-		},
+		"./dist/time-input-polyfill-utils.min.js": "./dist/time-input-polyfill-utils.min.js",
 		"./universalValues.json": "./universalValues.json"
 	},
 	"files": [
