Fix for tsdoc comments getting stripped out of distribution files
Still strips comments out of the minified package

--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -10,7 +10,7 @@
 		"pretty": true,
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
-		"removeComments": true,
+		"removeComments": false,
 		"allowSyntheticDefaultImports": true
 	}
 }
