--- a/tsconfig.prepublish.rollup.json
+++ b/tsconfig.prepublish.rollup.json
@@ -3,7 +3,8 @@
 	"compilerOptions": {
 		"module": "ES2015",
 		"lib": ["es2015", "es2017", "dom"],
-		"types": ["cypress"]
+		"types": ["cypress"],
+		"removeComments": true
 	},
 	"include": ["**/*.ts", "**/*.js"],
 	"exclude": ["./node_modules"]
