--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,10 @@
 	"compilerOptions": {
 		"moduleResolution": "node",
 		"alwaysStrict": true,
+		"noImplicitAny": true,
 		"strict": true,
 		"target": "es5",
-		"module": "ES2015",
+		"module": "ESNext",
 		"lib": ["es2015", "es2017", "dom"],
 		"baseUrl": "../node_modules",
 		"types": ["cypress"]
