--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
 	"name": "@time-input-polyfill/utils",
-	"version": "1.0.4",
+	"version": "1.0.5-beta.5",
 	"description": "A library of helper functions designed to make the building of time input polyfill components easier.",
-	"main": "npm/index.js",
-	"jsdelivr": "npm/time-input-polyfill-utils.min.js",
+	"module": "npm/mjs/index.js",
+	"main": "npm/umd/index.js",
+	"jsdelivr": "npm/umd/time-input-polyfill-utils.min.js",
 	"type": "module",
 	"scripts": {
 		"start": "cypress open",
@@ -15,7 +16,7 @@
 		"cy:getters": "cypress run --spec \"cypress/integration/getters.test.ts\"",
 		"cy:modifiers": "cypress run --spec \"cypress/integration/modifiers.test.ts\"",
 		"cy:is": "cypress run --spec \"cypress/integration/is.test.ts\"",
-		"prepublishOnly": "npx rollup -c && npx tsc --project tsconfig.prepublish.json",
+		"prepublishOnly": "npx rollup -c && npx tsc --project tsconfig.umd.json && npx tsc --project tsconfig.mjs.json",
 		"postpublish": "rm -rf npm",
 		"testpublish": "npm run prepublishOnly && npm run postpublish",
 		"pub": "npm publish --access public"
@@ -44,6 +45,7 @@
 	},
 	"devDependencies": {
 		"@cypress/webpack-preprocessor": "^4.1.1",
+		"@rollup/plugin-node-resolve": "^15.1.0",
 		"@rollup/plugin-typescript": "^4.0.0",
 		"@typescript-eslint/eslint-plugin": "^2.25.0",
 		"@typescript-eslint/parser": "^2.25.0",
@@ -57,7 +59,7 @@
 		"eslint-plugin-prettier": "^3.1.2",
 		"prettier": "^2.3.2",
 		"prettier-plugin-organize-imports": "^2.3.3",
-		"rollup": "^2.3.3",
+		"rollup": "^2.79.1",
 		"rollup-plugin-babel": "^4.4.0",
 		"rollup-plugin-terser": "^5.3.0",
 		"ts-loader": "^6.2.1",
