--- a/tsconfig.umd.json
+++ b/tsconfig.umd.json
@@ -9,7 +9,7 @@
 		"lib": ["es2015", "es2017", "dom"],
 		"declaration": true,
 		"removeComments": false,
-		"outDir": "npm",
+		"outDir": "npm/umd",
 		"allowUmdGlobalAccess": true
 	},
 	"files": ["./index.ts"],
