Fixing ts compile errors

--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -8,7 +8,7 @@
 		"baseUrl": "../node_modules",
 		"moduleResolution": "node",
 		"pretty": true,
-		"resolveJsonModule": true,
+		"resolveJsonModule": false,
 		"skipLibCheck": true,
 		"removeComments": false,
 		"allowSyntheticDefaultImports": true
